# Squid

./: CMakeLists.txt
example/: main.cpp
include/: Squid.h
src/: AppWindow.cpp  AppWindow.h  Buffer.cpp  Buffer.h  Color.cpp  Color.h  Node.cpp  Node.h  Squid.cpp  globals.h
src/nodes/: Inline.cpp  Inline.h  Span.h
src/typography/: Font.cpp  Font.h  Text.cpp  Text.h
